Fixed some issues with Google Docs
Fixed a problem with title screens not showing up and made
implementation better/smarter.

--- a/source/less/structure.less
+++ b/source/less/structure.less
@@ -103,6 +103,7 @@ html, body {
 		background-color:@white;
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom:@base-space;
 		clear:both;
 		blockquote {
 			font-size: @base-font;
@@ -137,6 +138,7 @@ html, body {
 		}
 		.vcard {
 			float:right;
+			margin-bottom:@base-space;
 			//position: relative;
 			a {
 				color: @color-dark-second;
