--- a/source/less/type.less
+++ b/source/less/type.less
@@ -87,7 +87,7 @@
 	}
 	h3 {
 		font-size: 24px;
-		line-height:24px;
+		line-height:26px;
 		small {
 			font-size: 14px;
 		}
@@ -168,6 +168,7 @@
 		color: @color-caption;
 		font-size: 11px;
 		line-height: 14px;
+		clear:both;
 	}
 	
 	
