--- a/timeline.css
+++ b/timeline.css
@@ -25,11 +25,11 @@ html,body{height:100%;padding:0px;margin:0px;}
 #timeline img{max-height:100%;border:1px solid #999999;}
 #timeline a{color:#0088cc;text-decoration:none;}
 #timeline a:hover{color:#005580;text-decoration:underline;}
-#timeline .twitter{text-align:left;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;background-color:#ffffff;margin-left:auto;margin-right:auto;clear:both;}#timeline .twitter blockquote{font-size:15px;line-height:20px;color:#666666;}#timeline .twitter blockquote p{font-size:28px;line-height:36px;margin-bottom:6px;padding-top:10px;background-color:#ffffff;font-family:"Georgia",Times New Roman,Times,serif;color:#000000;}
+#timeline .twitter{text-align:left;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;background-color:#ffffff;margin-left:auto;margin-right:auto;margin-bottom:15px;clear:both;}#timeline .twitter blockquote{font-size:15px;line-height:20px;color:#666666;}#timeline .twitter blockquote p{font-size:28px;line-height:36px;margin-bottom:6px;padding-top:10px;background-color:#ffffff;font-family:"Georgia",Times New Roman,Times,serif;color:#000000;}
 #timeline .twitter blockquote .quote-mark{color:#666666;}
 #timeline .twitter .created-at{background-image:url(timeline.png);background-repeat:no-repeat;background-position:0 -889px;width:24px;height:24px;width:24px;height:24px;overflow:hidden;margin-left:15px;display:inline-block;float:right;filter:alpha(opacity=25);-khtml-opacity:0.25;-moz-opacity:0.25;opacity:0.25;}
 #timeline .twitter .created-at:hover{filter:alpha(opacity=100);-khtml-opacity:1;-moz-opacity:1;opacity:1;}
-#timeline .twitter .vcard{float:right;}#timeline .twitter .vcard a{color:#333333;}
+#timeline .twitter .vcard{float:right;margin-bottom:15px;}#timeline .twitter .vcard a{color:#333333;}
 #timeline .twitter .vcard a:hover{text-decoration:none;}#timeline .twitter .vcard a:hover .fn{text-decoration:underline;}
 #timeline .twitter .vcard .fn,#timeline .twitter .vcard .nickname{padding-left:42px;}
 #timeline .twitter .vcard .fn{display:block;font-weight:bold;}
@@ -112,7 +112,7 @@ html,body{height:100%;padding:0px;margin:0px;}
 #timeline h1{margin-bottom:15px;font-size:32px;line-height:34px;}#timeline h1 small{font-size:18px;}
 #timeline h2{margin-bottom:15px;font-size:28px;line-height:30px;}#timeline h2 small{font-size:14px;line-height:16px;}
 #timeline h3,#timeline h4,#timeline h5,#timeline h6{line-height:40px;}#timeline h3 .active,#timeline h4 .active,#timeline h5 .active,#timeline h6 .active{color:#0088cc;}
-#timeline h3{font-size:24px;line-height:24px;}#timeline h3 small{font-size:14px;}
+#timeline h3{font-size:24px;line-height:26px;}#timeline h3 small{font-size:14px;}
 #timeline h4{font-size:16px;line-height:18px;}#timeline h4 small{font-size:12px;}
 #timeline h5{font-size:14px;line-height:16px;}
 #timeline h6{font-size:13px;line-height:14px;text-transform:uppercase;}
@@ -120,8 +120,8 @@ html,body{height:100%;padding:0px;margin:0px;}
 #timeline Q{quotes:'„' '“';font-style:italic;}
 #timeline .credit,#timeline .caption{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}
 #timeline .credit{color:#999999;text-align:right;font-size:10px;line-height:10px;display:block;margin:0 auto;clear:both;}
-#timeline .caption{text-align:left;margin-top:5px;color:#666666;font-size:11px;line-height:14px;}
-.tooltip{position:absolute;z-index:1020;display:block;visibility:visible;padding:5px;opacity:0;filter:alpha(opacity=0);font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:15px;font-weight:bold;line-height:20px;font-size:12px;line-height:11px;}
+#timeline .caption{text-align:left;margin-top:5px;color:#666666;font-size:11px;line-height:14px;clear:both;}
+.tooltip{position:absolute;z-index:1020;display:block;visibility:visible;padding:5px;opacity:0;filter:alpha(opacity=0);font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:15px;font-weight:bold;line-height:20px;font-size:12px;line-height:12px;}
 .tooltip.in{opacity:0.8;filter:alpha(opacity=80);}
 .tooltip.top{margin-top:-2px;}
 .tooltip.right{margin-left:2px;}
